--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ find_package(catkin REQUIRED COMPONENTS
    FILES
    FrontContactSwitches.msg
    Headlights.msg
+   TrackMotors.msg
  )
 
 ## Generate services in the 'srv' folder
@@ -139,14 +140,14 @@ include_directories(
 #    wiringPi
 #)
 
-#add_executable(arduino_talker src/arduino_talker.cpp
-#     src/KeyValueMessage.cpp
-#)
+add_executable(arduino_talker src/arduino_talker.cpp
+     src/KeyValueMessage.cpp
+)
 
-#target_link_libraries(arduino_talker
-#     ${catkin_LIBRARIES}
-#     wiringPi
-#)
+target_link_libraries(arduino_talker
+     ${catkin_LIBRARIES}
+     wiringPi
+)
 
 #add_executable(collision_manager src/collision_manager.cpp
 #)
