arduino_talker.cpp and socket_listener.cpp:    Add support to move the camera azimuth servo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
    FrontContactSwitches.msg
    Headlights.msg
    TrackMotors.msg
+   CameraAzimuth.msg
  )
 
 ## Generate services in the 'srv' folder
